Fix some spacing problems.

--- a/_sass/theme.scss
+++ b/_sass/theme.scss
@@ -191,8 +191,8 @@ li {
     margin-bottom: 10px;
 }
 
-li>a {
-    margin-bottom: 10px;
+li>ul {
+    margin-top: 10px;
 }
 
 ul>li::before {
